Fix: tags alignment in dashboard

--- a/ui/src/styles/globals.css
+++ b/ui/src/styles/globals.css
@@ -615,7 +615,7 @@ z-index: 0;
   display: flex;
   justify-content: center;
   width: 100%;
-  padding-left: 5em;
+  padding-left: 9em;
 }
 
 .dashboard .ant-space {
@@ -658,6 +658,7 @@ z-index: 0;
   background-color: var(--color-light-gray);
   color: black;
   margin-left: 0.5em;
+  margin-bottom: 0.5em;
   text-transform: capitalize;
 
   &.ant-tag-checkable-checked {
